# Cerveva_pa_ya

mi_sistema_web/: app.py  build.sh  inventario_ventas.db  pyproject.toml  railway.toml  requirements.txt
mi_sistema_web/static/: estilo.css
mi_sistema_web/templates/: agregar_producto.html  dashboard.html  editar_producto.html  facturacion.html  ganancias.html  inventario.html  login.html  ventas_por_dia.html
