[tool.poetry]
name = "mi-sistema-web"
version = "0.1.0"
description = "Sistema de inventarios"
authors = ["karenlorenagarzont@gmail.com"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<3.12"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
flask = "^3.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
